--- a/BuildaWebsiteDesignSystem/resources/css/styles.css
+++ b/BuildaWebsiteDesignSystem/resources/css/styles.css
@@ -1,11 +1,86 @@
 * {
-    background-color: antiquewhite;
-    
+    background-color:white;
+    font-family: Georgia;
 }
 
+body { 
+    display: block;
+    margin: 0 10%;
+}
 
 section {
     border: 2px solid black;
     padding: 10px;
     margin: 10px 0;
+}
+
+/* Colors Section*/
+
+.color-choice {
+    display: inline-block;
+    width: 33%;
+    text-align: center;
+    margin: 10px 0;
+}
+
+.cool-blue {
+    background-color: #2d5dcc;
+    color: white;
+}
+
+.pink {
+    background-color: #d957d9;
+    color: white;
+}
+
+.mint-green {
+    background-color: #4fe0b0;
+}
+
+.beige {
+    background-color: #efd9ca;
+}
+
+
+/* Font Section Styles */
+
+.font-choices {
+    display: inline-block;
+    width: 40%;
+}
+
+h3 {
+    text-decoration: underline;
+}
+
+.source-code-pro {
+    font-family: 'Source Code Pro', monospace;
+}
+
+.nunito-sans {
+    font-family: 'Nunito Sans', sans-serif;
+}
+
+.poppins {
+    font-family: 'Poppins', sans-serif;
+}
+
+.bold {
+    font-weight: 700;
+}
+
+.italic {
+    font-style: italic;
+}
+
+
+/* Text Styles Section */
+.heading1 {
+    font-weight: 700;
+    font-size: 26px;
+}
+
+.heading2 {
+    font-weight: 500;
+    font-size: 18px;
 }
