--- a/TeaCozyProject/resources/css/styles.css
+++ b/TeaCozyProject/resources/css/styles.css
@@ -5,16 +5,17 @@
     opacity: 0.9;
     text-align: center;
     margin: 0;
-}
-
-p {
     font-size: 22px;
 }
 
 h2 {
     margin-bottom: 10px;
+    font-size: 32px;
 }
 
+/* p {
+    font-size: 22px;
+} */
 
 /* Header Section*/
 
@@ -104,17 +105,41 @@ li {
 
 .location h2 {
     background: none;
+    padding-top: 50px;
 }
 
 .location-container {
+    margin-top: 15px;
+    background: none;
     opacity: 1;
     display: flex;
+    justify-content: center;
     row-gap: 40px;
-    column-gap: 40px;;
-    
+    column-gap: 40px; 
 }
 
-.location-text {
+.lt {  
     width: 300px;
-    height: 300px;
+    height: 250px;
+    opacity: 1;
+    padding: 25px 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+/* Footer */
+
+.comp {
+    margin-top: 20px;  
+    height: 200px;
+}
+
+.spacer {
+    margin: 20px;
+}
+
+.copyright-sec {
+    margin: 0 0 50px 20px;
+    text-align: left;
 }
